--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express": "^4.18.2",
     "fuse.js": "^6.6.2",
     "html-to-image": "^1.11.11",
+    "katex": "^0.16.9",
     "mermaid": "^10.3.1",
     "midjourney": "^4.3.13",
     "nanoid": "^4.0.2",
@@ -40,6 +41,7 @@
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.7",
     "react-router-dom": "^6.14.1",
+    "react-toastify": "^9.1.3",
     "rehype-highlight": "^6.0.0",
     "rehype-katex": "^6.0.3",
     "remark-breaks": "^3.0.2",
